Fix alignment and style issues

--- a/src/app/post/details/details.component.scss
+++ b/src/app/post/details/details.component.scss
@@ -1,4 +1,7 @@
 .post-details-container{
+  width: 100%;
+  margin: 0 auto;
+  max-width: 1000px;
   .main-content-wrapper{
     .related-post-list{
       margin-top: 20px;
