--- a/src/app/post/list/list.component.scss
+++ b/src/app/post/list/list.component.scss
@@ -5,12 +5,6 @@
     // padding-left: 200px;
     .header-wrapper{
       margin: 0px 15px;
-
-      .bill-details{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
       
       .filters-wrapper{
         margin: 20px 0px;
@@ -32,18 +26,24 @@
         color: $contrast-color;
         font-size: 14px;
         text-align: center;
+        border-radius: 4px;
         background-color: #007dcc;
       }
     }
   }
-  .bill-list{
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+  .post-list{
+    max-width: 1200px;
+    margin: 0 auto;
   }
   .empty-state-wrapper{
-    height: calc(100vh - 200px);
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    img{
+      height: auto;
+      width: 100%;
+    }
   }
 }
