--- a/src/common/checkbox/checkbox.component.scss
+++ b/src/common/checkbox/checkbox.component.scss
@@ -3,6 +3,7 @@
     padding: 5px 0px;
     margin-bottom: 15px;
     align-items: center;
+    cursor: pointer;
 
     .filter-icon{
       width: 14px;
