--- a/src/common/filters/filters.component.scss
+++ b/src/common/filters/filters.component.scss
@@ -7,6 +7,7 @@
   left: 0;
   top: $header-height;
   box-sizing: border-box;
+  z-index: 101;
   background: $contrast-color;
   transition: width 0.3s ease 0s;
   box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
