--- a/src/common/header/header.component.scss
+++ b/src/common/header/header.component.scss
@@ -19,6 +19,10 @@
     font-size: 20px;
     padding: 10px 20px;
     cursor: pointer;
+    display: block;
+    @media only screen and (min-width: 768px) {
+      display: none;
+    }
   }
 
   .brand-logo{
